- Solved issue related to CXF attachment temp file leakage (for payloads over 200Mb).
- New configuration properties added for ConnectionTimeout and ReceiveTimeout for connection between access points.
- Fixed Domibus integration with SMP/SML
- Fixed bug about the retention (downloaded and undownloaded) parameters. Downloading the message, its status will be set to DOWNLOADED.
Domibus 3.2.1
- JMX access to the JMS queues is secured
- Force the usage of the apache commons IO library from the application
- Possibility to load the logging configuration file from ${domibus.conf.location} for WebLogic/WildFly/Tomcat
Domibus 3.2-FR
- Added authentication/authorization example to the WS default plugin. Disabled by default, to assure backwards compatibility with older versions.
- Added XSD validation of the PMODE when it is uploaded by the user.
- Fixed the filtering and the pagination on the "Message Log" page
- Changed table names to be all UPPERCASE to fix the issue related to case sensitivity on Linux.
- Fixed the download message request issue when the schema validation and MTOM are both enabled.
- Schema validation for all WS operations is enabled by default. MTOM is disabled by default.
- Fixed the filtering and the pagination on the Message Log and the Error Log pages.
- Fixed issue with the signal messages that were not stored/cleared.
- Message Log page is now showing also the signal messages.
- Fixed issue about message delete timestamp not correctly set and MessageRetentionService failing to clear data of downloaded and retained messages.
- Fixed the retry mechanism in the JMS listeners
Domibus 3.2-RC1
- Added XSD validation for the operations exposed by the backend WS
- Harmonize the plugin registration on Tomcat/WebLogic/WildFly
- CRL validation
- Backend WS, interface changed as for operations getMessageStatus and getMessageErrors
- Enabled MTOM for backend WS.
- Ping messages are not stored/delivered to the backend